--- a/deploy.yml
+++ b/deploy.yml
@@ -4,8 +4,7 @@ name: spfxDeepDiveAssignmentOneCI
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
-on:
-  workflow_dispatch:
+on: push
   
 # Variables that are available for all the jobs in the workflow
 env:
