--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,58 +11,104 @@ on:
 # Variables that are available for all the jobs in the workflow
 env:
   SPPKG_FILE_NAME: 'spfx-read-write-operations.sppkg'
+  DEPLOYMENT_SCRIPT: 'DeployAppToSite.ps1'
+  SITE_URL: 'https://bhavyamsdnlego.sharepoint.com/sites/TestExtensionGroupSite2/'
+  APP_NAME: 'spfx-read-write-operations4'
   SEND_MAIL: 'true'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build and deploy"  
-   build-and-deploy:
+  # This workflow contains 2 jobs called "build and deploy"  
+   build:
     runs-on: ubuntu-latest
     
     steps:
     # Checkout code
     - name: Checkout code
-      uses: actions/checkout@v1
+      uses: actions/checkout@v2
       
     # Setup node.js runtime
-    - name: Use Node.js 10.x
+    - name: Setup Node.js 10.x
       uses: actions/setup-node@v1
       with:
         node-version: 10.x
     
     # npm install
-    - name: Run npm ci
-      run: npm ci
+    - name: Run npm install
+      run: npm install
     
-    # install gulp if mac
-    - name: Run npm i -g gulp
+     # install gulp if mac
+    - name: Install Gulp if runner is running on MacOS
       run: npm i -g gulp
       if: runner.os == 'macOS'
     
+    # gulp build
+    - name: Build solution
+      run: gulp build
+         
+    # npm test     
+    - name: Test solution
+      run: npm test
+      
     # gulp bundle and package solution
     - name: Bundle and package
       run: |
         gulp bundle --ship
-        gulp package-solution --ship    
+        gulp package-solution --ship
+        
+    # upload build package    
+    - name: Upload Build Package
+      uses: actions/upload-artifact@v2
+      with:
+        name: buildPackage
+        path: sharepoint/solution/${{env.SPPKG_FILE_NAME}}   
+
+    # upload deployment script    
+    - name: Upload deployment script
+      uses: actions/upload-artifact@v2
+      with:
+        name: deploymentScript
+        path: ${{env.DEPLOYMENT_SCRIPT}}          
+   
+   # deploy job 
+   deploy:
+    runs-on: ubuntu-latest
+    needs: [build]
+    
+    steps:
+    
+    - name: Download package (sppkg file)
+      uses: actions/download-artifact@v1
+      with:
+        name: buildPackage
+        
+    - name: Download deployment script (ps1 file)
+      uses: actions/download-artifact@v1
+      with:
+        name: deploymentScript    
+        
+    - name: Install PnP Powershell and Deploy App on Site using PnP Powershell
+      run: deploymentScript/${{env.DEPLOYMENT_SCRIPT}} -SiteUrl ${{env.SITE_URL}} -packageFilePath buildPackage/${{env.SPPKG_FILE_NAME}} -appName ${{env.APP_NAME}} -username ${{secrets.ADMINUSERNAME}} -password ${{secrets.ADMINPASSWORD}}
+      shell: pwsh        
     
     # Login to tenant using action-cli-login
-    - name: Office 365 CLI Login
-      uses: pnp/action-cli-login@v1.0.0
-      with:
-        ADMIN_USERNAME: ${{secrets.ADMINUSERNAME}}
-        ADMIN_PASSWORD: ${{secrets.ADMINPASSWORD}}
+    #- name: Office 365 CLI Login
+    #  uses: pnp/action-cli-login@v1.0.0
+    #  with:
+    #    ADMIN_USERNAME: ${{secrets.ADMINUSERNAME}}
+    #    ADMIN_PASSWORD: ${{secrets.ADMINPASSWORD}}
     
     # Deploy package to tenant using action-cli-deploy
-    - name: Office 365 CLI Deploy
-      uses: pnp/action-cli-deploy@v1.0.0
-      with:
-        APP_FILE_PATH: sharepoint/solution/${{env.SPPKG_FILE_NAME}}
+    #- name: Office 365 CLI Deploy
+    #  uses: pnp/action-cli-deploy@v1.0.0
+    #  with:
+    #    APP_FILE_PATH: sharepoint/solution/${{env.SPPKG_FILE_NAME}}
         # SKIP_FEATURE_DEPLOYMENT: true
         # OVERWRITE: true
     
     # Send an email using action-cli-runscript
-    - name: Office 365 CLI Send email
-      uses: pnp/action-cli-runscript@v1.0.0
-      with:
-         O365_CLI_SCRIPT: o365 spo mail send --webUrl https://bhavyamsdnlego.sharepoint.com/sites/OneWayOfModernPOC --to 'bhavya.chhabra@bhavyamsdnlego.onmicrosoft.com' --subject 'Deployment done' --body '<h2>Office 365 CLI</h2> <p>The deployment is complete.</p> <br/> Email sent via Office 365 CLI GitHub Action.'
-      if: env.SEND_MAIL == 'true'
+    #- name: Office 365 CLI Send email
+    #  uses: pnp/action-cli-runscript@v1.0.0
+    #  with:
+    #     O365_CLI_SCRIPT: o365 spo mail send --webUrl https://bhavyamsdnlego.sharepoint.com/sites/OneWayOfModernPOC --to 'bhavya.chhabra@bhavyamsdnlego.onmicrosoft.com' --subject 'Deployment done' --body '<h2>Office 365 CLI</h2> <p>The deployment is complete.</p> <br/> Email sent via Office 365 CLI GitHub Action.'
+    #  if: env.SEND_MAIL == 'true'
