--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,7 +72,7 @@ jobs:
    
    # deploy job 
    deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: [build]
     
     steps:
