--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,7 +95,7 @@ jobs:
         
     - name: Install PnP Powershell and Deploy App on Site using PnP Powershell
       run: deploymentScript/${{env.DEPLOYMENT_SCRIPT}} -SiteUrl ${{env.SITE_URL}} -packageFilePath ${{steps.packageDownloadStep.outputs.download-path}}\${{env.SPPKG_FILE_NAME}} -appName ${{env.APP_NAME}} -username "vendor1@bhavyamsdnlego.onmicrosoft.com" -password "Hcl@1235"
-      shell: pwsh        
+      shell: powershell        
     
     # Login to tenant using action-cli-login
     #- name: Office 365 CLI Login
