--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "gulp bundle",
     "clean": "gulp clean",
-    "test": "gulp test"
+    "test": "jest"
   },
   "dependencies": {
     "@microsoft/sp-core-library": "1.10.0",
@@ -37,8 +37,57 @@
     "@microsoft/sp-webpart-workbench": "1.10.0",
     "@pnp/sp": "^2.0.6",
     "@types/chai": "3.4.34",
+    "@types/enzyme": "3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "26.0.9",
     "@types/mocha": "2.2.38",
     "ajv": "~5.2.2",
-    "gulp": "~3.9.1"
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.3",
+    "gulp": "~3.9.1",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "26.3.0",
+    "jest-junit": "11.1.0",
+    "react-test-renderer": "16.13.1",
+    "ts-jest": "26.1.4"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    },
+    "testMatch": [
+      "**/src/**/*.test.+(ts|tsx|js)"
+    ],
+    "collectCoverage": true,
+    "coverageReporters": [
+      "json",
+      "lcov",
+      "text",
+      "cobertura"
+    ],
+    "coverageDirectory": "<rootDir>/jest",
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    },
+    "reporters": [
+      "default",
+      "jest-junit"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 100,
+        "functions": 100,
+        "lines": 100,
+        "statements": 100
+      }
+    }
+  },
+  "jest-junit": {
+    "output": "./jest/summary-jest-junit.xml"
   }
 }
